Fixed spacing issues

--- a/SketchyBusiness/frontend/src/Card.css
+++ b/SketchyBusiness/frontend/src/Card.css
@@ -46,7 +46,6 @@
     color: #F0EFEB;
     padding: 0%;
     margin: 0%;
-    margin-right: 2px;
     background: transparent;
     border: none;
     cursor: pointer;
